ChangeLog for Gawk
==================

2008-05-07 Bo Ørsted Andresen <zlin@exherbo.org>

	* -gawk-3.1.5.exheres-0, +gawk-3.1.6.exheres-0: Version bump. Install
	binaries outside /usr and create symlinks.

2007-07-15 Alexander Færøy <eroyf@eroyf.org>

	* -ChangeLog: Initial ChangeLog.
