@@ -3,6 +3,12 @@ ChangeLog for Gawk
 
 2008-05-07 Bo Ørsted Andresen <zlin@exherbo.org>
 
+	* -gawk-3.1.6.exheres-0, +gawk-3.1.6-r1.exheres-0,
+	+files/filefuncs/filefuncs.c, +files/filefuncs/Makefile: Baselayout
+	needs this patched filefuncs library.
+
+2008-05-07 Bo Ørsted Andresen <zlin@exherbo.org>
+
 	* -gawk-3.1.5.exheres-0, +gawk-3.1.6.exheres-0: Version bump. Install
 	binaries outside /usr and create symlinks.
 
